update link to header

--- a/frontend/src/styles/components/layout/Header.scss
+++ b/frontend/src/styles/components/layout/Header.scss
@@ -120,6 +120,13 @@
         letter-spacing: 0.5px;
         margin-left: 10px;
       }
+
+      .account-link {
+        text-decoration: none;
+        color: #000000;
+        display: flex;
+        align-items: center;
+      }
     }
   }
 
