method det popular and update view login

--- a/frontend/src/styles/components/layout/Header.scss
+++ b/frontend/src/styles/components/layout/Header.scss
@@ -1,6 +1,7 @@
 .main-header {
-  background-color: #ffffff;
-  border-bottom: 1px solid #eeeeee;
+  background-color: #f6f1eb;
+  
+  border-bottom: none;
   padding: 10px 10px;
   position: fixed;
   top: 0;
@@ -8,7 +9,6 @@
   right: 0;
   z-index: 1000;
   width: 100%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.02);
 
   .header-content {
     width: 100%;
