--- a/frontend/src/styles/components/layout/Header.scss
+++ b/frontend/src/styles/components/layout/Header.scss
@@ -1,10 +1,47 @@
+.top-bar {
+  background-color: #f8f4ef;
+  padding:  13px 20px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1001;
+  width: 100%;
+
+  .top-bar-content {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0 auto;
+    padding-right: 60px;
+    
+    .top-links {
+      display: flex;
+      gap: 20px;
+      
+      a {
+        color: #2a2a2a;
+        text-decoration: none;
+        font-size: 9px;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+        transition: opacity 0.2s ease;
+        
+        &:hover {
+          opacity: 0.8;
+        }
+      }
+    }
+  }
+}
+
 .main-header {
-  background-color: #f6f1eb;
+  background-color: #f8f4ef;
   
   border-bottom: none;
   padding: 10px 10px;
   position: fixed;
-  top: 0;
+  top: 32px;
   left: 0;
   right: 0;
   z-index: 1000;
@@ -26,6 +63,7 @@
     display: flex;
     align-items: center;
     gap: 15px;
+    position: relative;
 
     .menu-wrapper {
       cursor: pointer;
@@ -57,19 +95,24 @@
       }
       
       .search-input {
-        max-width: 120px;
+        max-width: 80px;
         width: 100%;
         padding: 4px 8px;
         font-size: 12px;
         border: 1px solid #333333;
         color: #000000;
+        transition: all 0.3s ease;
+        position: relative;
+        z-index: 1000;
         
         &::placeholder {
           color: #333333;
         }
 
         &:focus {
-          max-width: 1000px;
+          position: absolute;
+          max-width: 2100px;//изменять это дл ширни посика
+          width: calc(100vw - 250px);
           outline: none;
         }
       }
@@ -78,6 +121,12 @@
 
   .logo {
     text-align: center;
+    transition: opacity 0.3s ease;
+    
+    &.hide {
+      opacity: 0;
+      visibility: hidden;
+    }
     
     .logo-link {
       color: #333333;
@@ -204,10 +253,17 @@
       pointer-events: auto;
     }
   }
+
+  
 }
 
 @media (max-width: 768px) {
+  .top-bar {
+    display: none;
+  }
+  
   .main-header {
+    top: 0;
     padding: 8px 10px;
 
     .header-content {
