--- a/frontend/src/styles/components/layout/Footer.scss
+++ b/frontend/src/styles/components/layout/Footer.scss
@@ -109,6 +109,7 @@
       margin-top: 20px;
 
       input {
+        width: 100px;
         flex: 1;
         padding: 8px;
         border: 1px solid #333333;
@@ -127,6 +128,7 @@
       }
 
       button {
+        max-width: 80px;
         background-color: #ffffff;
         color: #333333;
         border: 1px solid #333333;
