--- a/frontend/src/styles/components/layout/Footer.scss
+++ b/frontend/src/styles/components/layout/Footer.scss
@@ -1,8 +1,9 @@
 .main-footer {
   background-color: #ffffff;
   color: #333333;
-  padding: 40px 20px 20px;
+  padding: 40px 20px ;
   margin-top: auto;
+  max-width: 100%;
 
   .footer-content {
     max-width: 1200px;
