--- a/frontend/src/styles/components/layout/Header.scss
+++ b/frontend/src/styles/components/layout/Header.scss
@@ -96,15 +96,17 @@
       }
       
       .search-input {
+        background: #f8f4ef;
         max-width: 80px;
         width: 100%;
         padding: 4px 8px;
         font-size: 12px;
-        border: 1px solid #333333;
+        border: 1px solid #000000;
         color: #000000;
         transition: all 0.3s ease;
         position: relative;
         z-index: 1000;
+        border-radius: 0; 
         
         &::placeholder {
           color: #333333;
