--- a/frontend/src/styles/components/common/LoginPage.scss
+++ b/frontend/src/styles/components/common/LoginPage.scss
@@ -22,20 +22,21 @@
       left: 30px;
       font-size: 1.5rem;
       color: #333;
+      margin-bottom: 10px; /* Добавляет отступ вниз */
     }
-
+    
     &::after {
       content: '';
       position: absolute;
-      top: 60px;
+      top: 70px; /* Сместил вниз, чтобы учесть отступ */
       left: 0;
       width: 100%;
-      height: 1px;
-      background-color: #ccc;
+      height: 1px; /* Сделал линию тоньше */
+      background-color: #eceae8;
     }
 
     h2, form {
-      margin-top: 70px;
+      margin-top: 22%;
     }
 
     h2 {
@@ -46,7 +47,7 @@
     }
 
     .form-group {
-      text-align: left;
+      text-align: center;
       margin-bottom: 15px;
 
       label {
@@ -57,19 +58,15 @@
       }
 
       input {
-        width: 100%;
+        width: 450px;
         padding: 10px;
         border: 1px solid #ccc;
-        border-radius: 4px;
+        border-radius: 0px;
         font-size: 0.9rem;
 
         &:focus {
           border-color: #333;
           outline: none;
-        }
-
-        &:invalid {
-          border-color: #e63946;
         }
       }
     }
@@ -98,7 +95,6 @@
     .alert.error {
       background-color: #fee;
       color: #e63946;
-      padding: 10px;
       border-radius: 4px;
       margin-bottom: 20px;
       font-size: 0.8rem;
@@ -106,18 +102,36 @@
     }
 
     .additional-links {
-      margin-top: 20px;
+      text-decoration: underline;
       text-align: center;
 
       a {
         color: #333;
         text-decoration: none;
         font-size: 0.9rem;
-
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
   }
-} 
+}
+
+.toggle-password {
+  font-size: 13px;
+  color: #555;
+  margin-left: 420px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.login-button {
+  display: block;
+  width: 300px !important;
+  margin: 20px auto;
+  background-color: #535353;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  text-align: center;
+}
