--- a/frontend/src/styles/components/layout/Header.scss
+++ b/frontend/src/styles/components/layout/Header.scss
@@ -119,8 +119,8 @@
 
 .search-input:focus {
   position: absolute;
-  max-width: 2100px;
-  width: calc(100vw - 250px);
+  max-width: 1900px;
+  width: calc(100vw - 290px);
   outline: none;
 }
 
@@ -239,6 +239,7 @@
   right: 0;
   width: 476px; 
   height: 200px;/* На всю ширину */
+  
 }
 
 .menu-links {
@@ -250,18 +251,23 @@
 .menu-link {
   color: #333333;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 11px;
+  font-weight: 400;
   letter-spacing: 0.5px;
   transition: color 0.2s ease;
   padding: 5px 0;
   background-color: transparent; /* Убираем фон */
   border: none; /* Убираем границу */
+  margin-left: 6%;
 }
 
 .menu-link:hover {
   color: #000000;
 }
 
+.menu-text-links{
+  margin-top: 50px;
+}
 
 /* Адаптивность */
 @media (max-width: 768px) {
